--- a/hbv2015/style/main.css
+++ b/hbv2015/style/main.css
@@ -183,13 +183,6 @@ footer p {
 footer a:hover {
   color: #61CE3C; }
 
-@font-face {
-  font-family: 'Comic Neue';
-  src: url("../fonts/ComicNeue-Light.eot");
-  /* IE9 Compat Modes */
-  src: url("../fonts/ComicNeue-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/ComicNeue-Light.woff") format("woff"), url("../fonts/ComicNeue-Light.woff2") format("woff2"), url("../fonts/ComicNeue-Light.ttf") format("truetype");
-  /* Safari, Android, iOS */
-  font-weight: 100; }
 .hbv {
   font-family: "Comic Sans MS", "Comic Sans", cursive;
   background-color: #1340A1; }
@@ -220,8 +213,10 @@ footer a:hover {
   .hbv audio {
     display: block;
     margin: 0 auto; }
-  .hbv footer {
-    color: black; }
   .hbv .audio {
     text-align: center;
     font-size: 20px; }
+    .hbv .audio audio {
+      margin-top: 5px; }
+  .hbv footer {
+    color: black; }
